--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 div.unit.item {
     display: grid;
-    grid-template-columns: max-content auto;
+    grid-template-columns: max-content 1fr;
 }
 
 div.unit.item>div:first-child {
